--- a/netflix/streaming/templates/streaming/search_results_series.html
+++ b/netflix/streaming/templates/streaming/search_results_series.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="header-left">
-            <form action="{% url 'search-movies' %}" method="get" class="search-form">
+            <form action="{% url 'search-series' %}" method="get" class="search-form">
                 <img src="{% static 'img/magnifying-glass.png' %}" alt="Search" style="width: 20px; vertical-align: middle; margin-right: 10px;">
                 <input type="text" name="q" placeholder="Search..." class="search-bar" value="{{ query }}">
             </form>
@@ -26,16 +26,25 @@
                     <img src="{% static 'img/film.png' %}" alt="Home" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Films
                 </a>
-                
                 <a href="{% url 'series' %}">
                     <img src="{% static 'img/tv-show.png' %}" alt="Series" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Series
                 </a>
-
                 <a href="{% url 'playlist' %}">
                     <img src="{% static 'img/checklist.png' %}" alt="Playlist" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Playlist
                 </a>
+                {% if user.is_authenticated %}
+                    <a href="{% url 'logout' %}">
+                        <img src="{% static 'img/logout.png' %}" alt="Logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                        Logout
+                    </a>
+                {% else %}
+                    <a href="{% url 'login' %}">
+                        <img src="{% static 'img/login.png' %}" alt="Login" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                        Login
+                    </a>
+                {% endif %}
             </nav>
         </div>
     </header>
@@ -48,21 +57,20 @@
             <div class="movie-card">
                 <img src="https://image.tmdb.org/t/p/w500{{ series.poster_path }}" alt="{{ series.title }}" class="serie-poster">
                 <div class="movie-info">
-                    <h3>{{ series.title }}</h3> <!-- Título de la serie -->
-                    <p>{{ series.release_date }}</p> <!-- Fecha de lanzamiento -->
-                    <p>{{ series.overview|truncatechars:100 }}</p> <!-- Descripción -->
+                    <h3>{{ series.title }}</h3>
+                    <p>{{ series.release_date }}</p>
+                    <p>{{ series.overview|truncatechars:100 }}</p>
                 </div>
                 <form action="{% url 'add-to-playlist' series.id 'series' %}" method="post" class="star-form">
                     {% csrf_token %}
                     <button type="submit" class="add-to-playlist-button {% if series.id in playlists %}favourited{% endif %}">
                         {% if series.id in playlists %}
-                        &#9733; <!-- Filled Star -->
+                        &#9733;
                         {% else %}
-                        &#9734; <!-- Empty Star -->
+                        &#9734;
                         {% endif %}
                     </button>
                 </form>
-                
             </div>
             {% endfor %}
         </div>
