falta el logout

--- a/netflix/streaming/templates/streaming/series.html
+++ b/netflix/streaming/templates/streaming/series.html
@@ -61,11 +61,11 @@
                     <p>{{ series.release_date }}</p>
                     <p>{{ series.description|truncatechars:100 }}</p>
                 </div>
-                <form action="{% if user.is_authenticated %}{% url 'add-to-playlist' movie.id 'movie' %}{% else %}{% url 'login' %}{% endif %}" 
+                <form action="{% if user.is_authenticated %}{% url 'add-to-playlist' series.id 'series' %}{% else %}{% url 'login' %}{% endif %}" 
       method="post" class="star-form">
                     {% csrf_token %}
-                    <button type="submit" class="add-to-playlist-button {% if user.is_authenticated and movie.id in playlists %}favourited{% endif %}">
-                        {% if user.is_authenticated and movie.id in playlists %}
+                    <button type="submit" class="add-to-playlist-button {% if user.is_authenticated and series.id in playlists %}favourited{% endif %}">
+                        {% if user.is_authenticated and series.id in playlists %}
                             &#9733; <!-- Estrella llena -->
                         {% else %}
                             &#9734; <!-- Estrella vacía -->
