--- a/netflix/streaming/templates/streaming/movie.html
+++ b/netflix/streaming/templates/streaming/movie.html
@@ -27,14 +27,11 @@
                 {% if user.is_authenticated %}
                     <a href="{% url 'playlist' %}">Playlist</a>
                     <a href="{% url 'logout' %}">
-                        <img src="{% static 'img/logout.png' %}" alt="Logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                        <img src="{% static 'img/logout.png' %}" alt="logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                         Logout
                     </a>
                 {% else %}
-                <a href="{% url 'login' %}">
-                    <img src="{% static 'img/logout.png' %}" alt="login" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Login
-                </a>
+                    <a href="{% url 'login' %}">Login</a>
                 {% endif %}
             </nav>
         </div>
