--- a/netflix/streaming/templates/streaming/search_results_series.html
+++ b/netflix/streaming/templates/streaming/search_results_series.html
@@ -35,15 +35,18 @@
                     Playlist
                 </a>
                 {% if user.is_authenticated %}
-                    <a href="{% url 'logout' %}">
-                        <img src="{% static 'img/logout.png' %}" alt="logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                <form method="post" action="{% url 'logout' %}" style="display: inline;">
+                    {% csrf_token %}
+                    <button type="submit" style="background: none; border: none; color: inherit; cursor: pointer;">
+                        <img src="{% static 'img/logout.png' %}" alt="Logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                         Logout
-                    </a>
+                    </button>
+                </form>
                 {% else %}
-                    <a href="{% url 'login' %}">
-                        <img src="{% static 'img/logout.png' %}" alt="Login" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                        Login
-                    </a>
+                <a href="{% url 'login' %}">
+                    <img src="{% static 'img/logout.png' %}" alt="Login" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    Login
+                </a>
                 {% endif %}
             </nav>
         </div>
