--- a/netflix/streaming/templates/streaming/series.html
+++ b/netflix/streaming/templates/streaming/series.html
@@ -36,13 +36,16 @@
                 </a>
                 
                 {% if user.is_authenticated %}
-                <a href="{% url 'logout' %}">
-                    <img src="{% static 'img/logout.png' %}" alt="Logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
-                    Logout
-                </a>
+                <form method="post" action="{% url 'logout' %}" style="display: inline;">
+                    {% csrf_token %}
+                    <button type="submit" style="background: none; border: none; color: inherit; cursor: pointer;">
+                        <img src="{% static 'img/logout.png' %}" alt="Logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                        Logout
+                    </button>
+                </form>
                 {% else %}
                 <a href="{% url 'login' %}">
-                    <img src="{% static 'img/logout.png' %}" alt="login" style="width: 24px; vertical-align: middle; margin-right: 5px;">
+                    <img src="{% static 'img/logout.png' %}" alt="Login" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Login
                 </a>
                 {% endif %}
