--- a/netflix/streaming/templates/streaming/home.html
+++ b/netflix/streaming/templates/streaming/home.html
@@ -39,9 +39,9 @@
                 
             
                 {% if user.is_authenticated %}
-                <form method="post" action="{% url 'logout' %}" style="display: inline;">
+                <form method="post" action="{% url 'logout' %}" class="nav-link-form">
                     {% csrf_token %}
-                    <button type="submit" style="background: none; border: none; color: inherit; cursor: pointer;">
+                    <button type="submit" class="nav-link">
                         <img src="{% static 'img/logout.png' %}" alt="Logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                         Logout
                     </button>
