--- a/netflix/streaming/templates/streaming/movie.html
+++ b/netflix/streaming/templates/streaming/movie.html
@@ -25,9 +25,9 @@
                 <a href="{% url 'home' %}">Films</a>
                 <a href="{% url 'series' %}">Series</a>
                 {% if user.is_authenticated %}
-                <form method="post" action="{% url 'logout' %}" style="display: inline;">
+                <form method="post" action="{% url 'logout' %}">
                     {% csrf_token %}
-                    <button type="submit" style="background: none; border: none; color: inherit; cursor: pointer;">
+                    <button type="submit" class="nav-link">
                         <img src="{% static 'img/logout.png' %}" alt="Logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                         Logout
                     </button>
