--- a/netflix/streaming/templates/streaming/playlist.html
+++ b/netflix/streaming/templates/streaming/playlist.html
@@ -34,9 +34,9 @@
                     <img src="{% static 'img/checklist.png' %}" alt="Playlist" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                     Playlist
                 </a>
-                <form method="post" action="{% url 'logout' %}" style="display: inline; margin-left: 10px;">
+                <form method="post" action="{% url 'logout' %}">
                     {% csrf_token %}
-                    <button type="submit" style="background: none; border: none; color: inherit; cursor: pointer;">
+                    <button type="submit" class="nav-link">
                         <img src="{% static 'img/logout.png' %}" alt="Logout" style="width: 24px; vertical-align: middle; margin-right: 5px;">
                         Logout
                     </button>
